# eloi-wine

./: .gitignore  PRD.md  README.md  merchants.yaml  pyproject.toml
corkscrew/: cli.py  config.py  downloader.py  models.py  normalizer.py  storage.py  url_resolver.py
corkscrew/normalizers/: __init__.py  farr_vintners.py  google_sheets.py  hub_wine.py
docs/: merchant-sources.md
docs/plans/: 2026-02-23-corkscrew-v1-design.md  2026-02-23-corkscrew-v1-implementation.md
tests/: test_config.py  test_downloader.py  test_merchant_normalizers.py  test_models.py  test_normalizer.py  test_storage.py  test_url_resolver.py
tests/fixtures/: merchants_test.yaml  sample_wines.csv
