[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corkscrew"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "chardet>=5.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
corkscrew = "corkscrew.cli:cli"

[tool.setuptools.packages.find]
include = ["corkscrew*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
